<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_holder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin"
        android:paddingEnd="@dimen/activity_margin"
        android:paddingBottom="@dimen/medium_margin">

        <org.fossify.commons.views.MyTextView
            android:id="@+id/about_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/big_text_size"
            android:textStyle="bold" />

        <org.fossify.commons.views.MyTextView
            android:id="@+id/about_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:textSize="@dimen/normal_text_size" />

        <org.fossify.commons.views.MyTextView
            android:id="@+id/about_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/about_app_description"
            android:textSize="@dimen/bigger_text_size" />

        <org.fossify.commons.views.MyTextView
            android:id="@+id/about_tagline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/fast_secure_open_source"
            android:textSize="@dimen/normal_text_size" />

        <org.fossify.commons.views.MyTextView
            android:id="@+id/about_developer_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:text="@string/about_developer_label"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />

        <org.fossify.commons.views.MyTextView
            android:id="@+id/about_developer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/about_developer_name"
            android:textSize="@dimen/bigger_text_size" />

        <org.fossify.commons.views.MyTextView
            android:id="@+id/about_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="?attr/selectableItemBackground"
            android:paddingTop="@dimen/medium_margin"
            android:paddingBottom="@dimen/medium_margin"
            android:text="@string/about_website"
            android:textSize="@dimen/bigger_text_size" />

        <org.fossify.commons.views.MyTextView
            android:id="@+id/about_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:paddingTop="@dimen/medium_margin"
            android:paddingBottom="@dimen/medium_margin"
            android:text="@string/about_email"
            android:textSize="@dimen/bigger_text_size" />

        <org.fossify.commons.views.MyTextView
            android:id="@+id/about_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:paddingTop="@dimen/medium_margin"
            android:paddingBottom="@dimen/medium_margin"
            android:text="@string/about_facebook"
            android:textSize="@dimen/bigger_text_size" />
    </LinearLayout>
</ScrollView>
