<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/shortcuts_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.itamadersomajinc.banglatype.commons.views.MyAppBarLayout
        android:id="@+id/shortcuts_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/shortcuts_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_primary"
            app:menu="@menu/menu_manage_shortcuts"
            app:title="@string/manage_shortcuts"
            app:titleTextAppearance="@style/AppTheme.ActionBar.TitleTextStyle" />

    </com.itamadersomajinc.banglatype.commons.views.MyAppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/shortcuts_nested_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/shortcuts_items_holder"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.itamadersomajinc.banglatype.commons.views.MyRecyclerView
                android:id="@+id/shortcuts_items_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                app:layoutManager="com.itamadersomajinc.banglatype.commons.views.MyLinearLayoutManager" />

            <com.itamadersomajinc.banglatype.commons.views.MyTextView
                android:id="@+id/shortcuts_items_placeholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:gravity="center_horizontal"
                android:paddingStart="@dimen/activity_margin"
                android:paddingTop="@dimen/big_margin"
                android:paddingEnd="@dimen/activity_margin"
                android:text="@string/manage_shortcuts_summary"
                android:textSize="@dimen/bigger_text_size"
                android:textStyle="italic"
                android:visibility="gone" />

            <com.itamadersomajinc.banglatype.commons.views.MyTextView
                android:id="@+id/shortcuts_items_placeholder_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/shortcuts_items_placeholder"
                android:layout_centerHorizontal="true"
                android:background="@drawable/ripple_all_corners"
                android:gravity="center"
                android:padding="@dimen/activity_margin"
                android:text="@string/add_new_item"
                android:textSize="@dimen/bigger_text_size"
                android:visibility="gone" />

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
